--- a/Shop.Web/Views/Account/Login.cshtml
+++ b/Shop.Web/Views/Account/Login.cshtml
@@ -27,7 +27,8 @@
                 <span asp-validation-for="RememberMe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-success" />
+                <button type="submit" class="btn btn-success">Login</button>
+
                 <a asp-action="Register" class="btn btn-primary">Register New User</a>
             </div>
         </form>
