--- a/Shop.Web/Views/Products/Delete.cshtml
+++ b/Shop.Web/Views/Products/Delete.cshtml
@@ -59,7 +59,7 @@
     </dl>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index" class="btn btn-success">Back to List</a>
+        <button type="submit" class="btn btn-danger"><i class="far fa-trash-alt"></i> Delete</button>
+        <a asp-action="Index" class="btn btn-success"><i class="far fa-chevron-left"></i> Back to List</a>
     </form>
 </div>
