--- a/Shop.Web/Views/Products/Edit.cshtml
+++ b/Shop.Web/Views/Products/Edit.cshtml
@@ -26,17 +26,31 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImageFile" class="control-label"></label>
-                <input asp-for="ImageFile" class="form-control" type="file"/>
+                <input asp-for="ImageFile" class="form-control" type="file" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastPurchase" class="control-label"></label>
-                <input asp-for="LastPurchase" class="form-control" />
+                <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+
+                    <input type="text" asp-for="LastPurchase" class="form-control datetimepicker-input" data-target="#datetimepicker1" />
+                    <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker" @*data-date-format="yyyy/mm/dd"*@>
+                        <div class="input-group-text"><i class="fal fa-calendar-alt"></i></div>
+                    </div>
+                </div>
                 <span asp-validation-for="LastPurchase" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <label asp-for="LastSale" class="control-label"></label>
-                <input asp-for="LastSale" class="form-control" />
+                <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+
+                    <input type="text" asp-for="LastSale" class="form-control datetimepicker-input" data-target="#datetimepicker2" />
+                    <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker" @*data-date-format="yyyy/mm/dd"*@>
+                        <div class="input-group-text"><i class="fal fa-calendar-alt"></i></div>
+                    </div>
+                </div>
                 <span asp-validation-for="LastSale" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -50,8 +64,8 @@
                 <span asp-validation-for="Stock" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-success">Back to List</a>
+                <button type="submit" class="btn btn-primary"><i class="far fa-save"></i> Save</button>
+                <a asp-action="Index" class="btn btn-success"><i class="far fa-chevron-left"></i> Back to List</a>
             </div>
         </form>
     </div>
@@ -67,3 +81,8 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script type="text/javascript">
+    $(document).ready(function () {
+        $.fn.datepicker.defaults.format = 'YYYY-MM-DD hh:mm';
+    });
+</script>
