--- a/Shop.Web/Views/Account/Login.cshtml
+++ b/Shop.Web/Views/Account/Login.cshtml
@@ -29,7 +29,10 @@
             <div class="form-group">
                 <button type="submit" class="btn btn-success">Login</button>
 
-                <a asp-action="Register" class="btn btn-primary">Register New User</a>
+                <a asp-action="Register" class="btn btn-primary"><i class="far fa-user-plus"></i> Register New User</a>
+            </div>
+            <div class="form-group">
+                <a asp-action="RecoverPassword" class="btn btn-link">Forgot your password?</a>
             </div>
         </form>
     </div>
