--- a/Shop.Web/Views/Orders/Create.cshtml
+++ b/Shop.Web/Views/Orders/Create.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     <a asp-action="AddProduct" class="btn btn-success"><i class="fas fa-plus"></i> Add Product</a>
-    <a asp-action="ConfirmOrder" class="btn btn-primary" data-toggle="modal" data-target="#confirmDialog"><i class="far fa-file-check" id="btnConfirm"></i>  Confirm Order</a>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#confirmDialog"><i class="far fa-file-check"></i>  Confirm Order</button>
 </p>
 <table class="table">
     <thead>
@@ -44,10 +44,11 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Value)
                 </td>
-                <td id="@item.Id">
+                <td>
                     <a asp-action="Increase" asp-route-id="@item.Id" class="btn btn-outline-warning" title="Add Quantity"><i class="fas fa-plus"></i></a>
                     <a asp-action="Decrease" asp-route-id="@item.Id" class="btn btn-outline-primary"><i class="fas fa-minus"></i></a>
-                    <a asp-action="DeleteItem" asp-route-id="@item.Id" class="btn btn-outline-danger" id="btnDeleteItem"><i class="fas fa-trash-alt"></i></a>
+                    @*<a asp-action="DeleteItem" asp-route-id="@item.Id" class="btn btn-outline-danger" id="btnDeleteItem"><i class="fas fa-trash-alt"></i></a>*@
+                    <button data-id="@item.Id" class="btn btn-outline-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="fas fa-trash-alt"></i></button>
                 </td>
             </tr>
         }
@@ -68,8 +69,8 @@
                 <p>Do you want to confirm the order?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btnNoConfirm">No</button>
-                <button type="button" class="btn btn-success" id="btnYesConfirm">Yes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" id="btnYes">Save changes</button>
             </div>
         </div>
     </div>
@@ -90,8 +91,8 @@
                 <p>Do you want to delete the product from order?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btnNoDelete">No</button>
-                <button type="button" class="btn btn-danger" id="btnYesDelete">Yes</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger" id="btnYesDelete">Delete</button>
             </div>
         </div>
     </div>
@@ -102,37 +103,20 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-
-            var id = 0;
-
-            $("#btnConfirm").click(function () {
-                $("#confirmDialog").modal('show');
-                return false;
-            });
-
-            $("#btnNoConfirm").click(function () {
-                $("#confirmDialog").modal('hide');
-                return false;
-            });
-
-            $("#btnYesConfirm").click(function () {
+            // Confirm Order
+            $("#btnYes").click(function () {
                 window.location.href = '/Orders/ConfirmOrder';
             });
 
-            $('a[id*=btnDeleteItem]').click(function () {
-                debugger;
-                id = $(this).parent()[0].id;
-                $("#deleteDialog").modal('show');
-                return false;
-            });
+            // Delete item
+            var item_to_delete;
 
-            $("#btnNoDelete").click(function () {
-                $("#deleteDialog").modal('hide');
-                return false;
+            $('.deleteItem').click((e) => {
+                item_to_delete = e.currentTarget.dataset.id;
             });
 
             $("#btnYesDelete").click(function () {
-                window.location.href = '/Orders/DeleteItem/' + id;
+                window.location.href = '/Orders/DeleteItem/' + item_to_delete;
             });
         });
     </script>
