--- a/Shop.Web/Views/Products/Details.cshtml
+++ b/Shop.Web/Views/Products/Details.cshtml
@@ -58,6 +58,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a> 
-    <a asp-action="Index" class="btn btn-success">Back to List</a>
+    @if (this.User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+
+    }
+        <a asp-action="Index" class="btn btn-success">Back to List</a>
 </div>
