--- a/Shop.Web/Views/Products/Index.cshtml
+++ b/Shop.Web/Views/Products/Index.cshtml
@@ -4,72 +4,104 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Products</h1>
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<p>
-    <a asp-action="Create" class="btn btn-primary"><i class="far fa-plus-square"></i> New Product</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastPurchase)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastSale)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsAvailabe)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Stock)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @if (!string.IsNullOrEmpty(item.ImageUrl))
-                    {
-                        <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:100px;height:150px;max-width: 100%; height: auto;" />
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastPurchase)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastSale)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsAvailabe)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Stock)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="far fa-edit"></i> Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary"><i class="far fa-info-circle"></i> Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="far fa-trash-alt"></i> Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+
+@if (this.User.IsInRole("Admin"))
+{
+    <p>
+        <a asp-action="Create" class="btn btn-primary"><i class="fas fa-plus"></i> New Product</a>
+    </p>
+}
+
+<div class="row">
+    <div class="col-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Products</h3>
+            </div>
+            <div class="panel-body">
+                <table class="table table-hover table-responsive table-striped" id="ProductsTable">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Price)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.ImageUrl)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.LastPurchase)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.LastSale)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.IsAvailabe)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Stock)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Price)
+                                </td>
+
+                                <td>
+                                    @if (!string.IsNullOrEmpty(item.ImageUrl))
+                                    {
+                                        <img src="@Url.Content(item.ImageUrl)" alt="Image" style="width:75px;height:75px;max-width: 100%; height: auto;" />
+                                    }
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastPurchase)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.LastSale)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.IsAvailabe)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Stock)
+                                </td>
+                                <td>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary"><i class="far fa-info-circle"></i> Details</a>
+
+                                    @if (this.User.IsInRole("Admin"))
+                                    {
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="far fa-edit"></i> Edit</a>
+                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger"><i class="far fa-trash-alt"></i> Delete</a>
+
+                                    }
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script>
+    	$(document).ready(function () {
+        	$('#ProductsTable').DataTable();
+    	});
+    </script>
+}
